# aoc

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  aoclib.pyi  justfile  mk  pyproject.toml
.github/workflows/: CI.yaml  lint.yaml
sols/2018/: 01.py  02.py  03.py
sols/2022/: 01.py  02.py  03.py  08.py  10.py  11.py  12.py  13.py
sols/2023/: 02.py  03.py  04.py  05.py  06.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  23.py  24.py  25.py
src/: lib.rs  orange.rs  point.rs
src/2021/: 01.py
src/2022/: 04.py  05.py  06.py  07.py  08.py  09.py  12.py
src/2023/: 01.py  02.py  03.py  05.py  07.py  08.py  10.py  11.py  14.py  16.py
tests/: test_orange.py
utils/: __init__.py  core.py  grid.py  orange.py  runner.py  view.py
